List task from wakanda server with wakjsc

--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
+    <script src="lib/wakjsc.js"></script>
+
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
-        packages: {        
+        packages: {
           build: {
             format: 'register',
             defaultExtension: 'js'
           }
         }
       });
+      
       System.import('build/main')
-            .then(null, console.error.bind(console));
+            .then(function () {
+              console.log(System._loader.modules);
+            }, console.error.bind(console));
     </script>
 
   </head>
