More proper way to import WakJSC (typescript builded)

--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
-    <script src="lib/wakjsc.js"></script>
+    <!--<script src="lib/wakjsc.js"></script>-->
 
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
         packages: {
+          'wakjsc': {
+            defaultExtension: 'js'
+          },
           build: {
             format: 'register',
             defaultExtension: 'js'
           }
         }
+        // map: {
+        //   'wakjsc': 'node_modules/wakjsc'
+        // }
       });
       
       System.import('build/main')
